fix theme toggle on safari, update hero title font sizes, add fade in/out on scroll

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -40,6 +40,7 @@
   min-height: 100%;
   transform-origin: 0 0;
   transform: translateZ(0);
+  transition: background-color 0.5s linear;
 }
 
 .heroTitleContainer {
@@ -55,13 +56,13 @@
   position: relative;
   width: 100%;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 768px) {
     h1 {
-      font-size: 6em;
+      font-size: 5em;
     }
   }
 
-  @media screen and (min-width: 720px) {
+  @media screen and (min-width: 1024px) {
     h1 {
       font-size: 8em;
     }
