--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,6 +51,7 @@ h2 {
   --container-alt: #a8a8a8;
   --container--rgb: 244, 244, 244;
   --focus: #0f9bfe;
+  --hero-background-rgb: 0, 0, 0;
   --hero-text-primary: #fff;
   --icon-primary: #000;
   --icon-secondary: #525252;
@@ -69,6 +70,7 @@ h2 {
   --container-alt: #6f6f6f;
   --container--rgb: 57, 57, 57;
   --focus: #60bdff;
+  --hero-background-rgb: 244, 244, 244;
   --hero-text-primary: #262626;
   --icon-primary: #f4f4f4;
   --icon-secondary: #c6c6c6;
